--- a/css/template.css
+++ b/css/template.css
@@ -41,6 +41,7 @@
     width: 100%;
     height: 600px;
     border-radius: 8px;
+    box-shadow: 1px 1px 5px 5px rgba(0,0,0,0.4);
 }
 
 .layout-1 button {
@@ -65,6 +66,7 @@
     height: 600px;
     z-index: -1;
     overflow: hidden;
+    border-radius: 8px;
 }
 
 .layout-2 .left-side img {
