--- a/css/home.css
+++ b/css/home.css
@@ -1,3 +1,9 @@
+#home .container {
+    max-width: 1240px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 /* ============== Hero Section ================= */
 
 #hero-section {
