--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,8 @@ body {
     font-family: 'Montserrat', sans-serif;
     background: var(--background-color);
     color: var(--primary-font-color);
-    overflow-x: hidden;
+    max-width: 100vw !important;
+    overflow-x: hidden !important;
     scroll-behavior: smooth;
 }
 
@@ -87,7 +88,7 @@ header {
     z-index: 1;
     /*border-bottom: 1px solid lightgray;*/
     position: fixed;
-    width: 100%;
+    width: 100vw;
     top: 0;
     backdrop-filter: blur(10px);
 }
@@ -159,6 +160,65 @@ header {
 
 .content {
     margin-top: var(--header-height);
+}
+
+.hamburger-menu {
+    padding: 8px;
+    font-size: 28px;
+    display: none;
+}
+
+.sidenav {
+    height: 100vh;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    text-align:center;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+
+}
+
+.sidenav a:hover{
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+@media (max-width: 768px) {
+    .menu-ul {
+        display: none;
+    }
+    .header .get-intouch {
+        display: none;
+    }
+    .hamburger-menu {
+        display: block;
+    }
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
 
 /* ============ Footer ============= */
