--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,4 @@
-#home .container {
-    max-width: 1240px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
 /* ============== Hero Section ================= */
-
 #hero-section {
     display: flex;
     justify-content: center;
@@ -14,6 +7,7 @@
 
 #hero-section .container {
     height: 100vh;
+    width: 100%;
 }
 
 #hero-section .pitch {
@@ -186,6 +180,25 @@
     opacity: 0.8;
 }
 
+@media (max-width: 1024px) {
+    #home #client .clients-row .client-img {
+        width: 200px;
+        height: 100px;
+    }
+}
+@media (max-width: 740px) {
+    #home #client .clients-row .client-img {
+        width: 160px;
+        height: 80px;
+    }
+}
+@media (max-width: 460px) {
+    #home #client .clients-row .client-img {
+        width: 120px;
+        height: 60px;
+    }
+}
+
 /* ========== Services ========= */
 #home #services .head .title {
     font-size: 38px;
@@ -200,95 +213,95 @@
     margin-bottom: 32px;
 }
 
-#home #services #service-1 {
+#home  #service-1 {
     margin-bottom: 60px;
 }
 
 
-#home #services #service-1 .main {
+#home  #service-1 .main {
     margin-top: 32px;
 }
 
-#home #services #service-1 .right-side {
+#home  #service-1 .right-side {
     width: 60%;
 }
 
-#home #services #service-1 .left-side {
+#home  #service-1 .left-side {
     width: 50%;
     height: 400px;
 }
 
-#home #services #service-1 .left-side img {
+#home  #service-1 .left-side img {
     height: 400px;
 }
 
 /* ========== Service 2 ========= */
 
-#home #services #service-2 {
-    margin-bottom: 120px;
+#home  #service-2 {
+    margin-bottom: 60px;
 }
 
-#home #services #service-2 .main {
+#home  #service-2 .main {
     margin-top: 24px;
 }
 
-#home #services #service-2 .left-side {
+#home  #service-2 .left-side {
     width: 60%;
 }
 
-#home #services #service-2 .right-side {
+#home  #service-2 .right-side {
     width: 50%;
     height: 400px;
 }
 
-#home #services #service-2 .right-side img {
+#home  #service-2 .right-side img {
     height: 400px;
 }
 
 /* ========== Service 3 ========= */
 
-#home #services #service-3 {
+#home  #service-3 {
     margin-bottom: 60px;
 }
 
 
-#home #services #service-3 .main {
+#home  #service-3 .main {
     margin-top: 24px;
 }
 
-#home #services #service-3 .right-side {
+#home  #service-3 .right-side {
     width: 60%;
 }
 
-#home #services #service-3 .left-side {
+#home  #service-3 .left-side {
     width: 50%;
     height: 400px;
 }
 
-#home #services #service-3 .left-side img {
+#home  #service-3 .left-side img {
     height: 400px;
 }
 
 /* ========== Service 4 ========= */
 
-#home #services #service-4 {
+#home  #service-4 {
     margin-bottom: 120px;
 }
 
-#home #services #service-4 .main {
+#home  #service-4 .main {
     margin-top: 24px;
 }
 
-#home #services #service-4 .left-side {
+#home  #service-4 .left-side {
     width: 60%;
 }
 
-#home #services #service-4 .right-side {
+#home #service-4 .right-side {
     width: 50%;
     height: 400px;
 }
 
-#home #services #service-4 .right-side img {
+#home  #service-4 .right-side img {
     height: 400px;
 }
 
@@ -327,5 +340,37 @@
 
 #home .contact-us .cta-side img {
     border: 1px solid black;
+}
+
+@media (max-width: 1024px) {
+    #home .contact-us .content-side {
+        flex: 0.3;
+    }
+    #home .contact-us .cta-side {
+        flex: 0.7;
+    }
+}
+@media (max-width: 740px) {
+    #home .contact-us {
+        flex-direction: column;
+    }
+    #home .contact-us .content-side {
+        flex: 1
+    }
+    #home .contact-us .cta-side {
+        flex: 1
+    }
+    #home .contact-us .cta-side {
+        margin-top: 32px;
+    }
+    #home .contact-us .cta-side {
+        width: 100%;
+    }
+}
+@media (max-width: 460px) {
+    #home #client .clients-row .client-img {
+        width: 120px;
+        height: 60px;
+    }
 }
 
