--- a/css/index.css
+++ b/css/index.css
@@ -173,6 +173,7 @@ header {
 .hamburger-menu {
     padding: 8px;
     font-size: 28px;
+    cursor: pointer;
     display: none;
 }
 
@@ -212,7 +213,7 @@ header {
     margin-left: 50px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 740px) {
     .menu-ul {
         display: none;
     }
@@ -221,6 +222,22 @@ header {
     }
     .hamburger-menu {
         display: block;
+        font-size: 24px;
+    }
+    .header .brand-logo span {
+        font-size: 18px;
+    }
+    .header img {
+        height: 40px;
+    }
+}
+
+@media (max-width: 460px) {
+    .header .brand-logo span {
+        font-size: 16px;
+    }
+    .header img {
+        height: 36px;
     }
 }
 
