--- a/css/about.css
+++ b/css/about.css
@@ -11,7 +11,26 @@
 /* ========== About ========= */
 
 #about #who-we-are {
+    margin-top: 120px;
     margin-bottom: 120px;
+    text-align: center;
+}
+
+#about #who-we-are .head {
+    margin: 0 auto;
+    width: 940px;
+}
+
+#about #who-we-are .head .title {
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0 auto;
+    margin-bottom: 32px;
+}
+
+#about #who-we-are .head .desc {
+    font-size: 18px;
+    margin: 0 auto;
 }
 
 #about #who-we-are .left-side {
@@ -30,8 +49,9 @@
 /* ========== Leadership ========= */
 
 #about #leadership .title {
-    font-size: 38px;
-    font-weight: 600;
+    font-size: 48px;
+    font-weight: bold;
+    margin: 0 auto;
     margin-bottom: 8px;
     text-align: center;
 }
