--- a/css/about.css
+++ b/css/about.css
@@ -134,74 +134,37 @@
     height: 400px;
 }
 
-/* ========== Accreditation ========= */
-#accreditation-1 .main {
-    margin-top: max(10vh, 64px);
-    width: 100%;
-
-}
-#accreditation-1 .title {
-    font-size: 32px;
-    font-weight: bold;
-    text-align: center;
-    width: 100%;
-    margin-bottom: 24px;
+/* ============== Presence ============== */
+#about .presence-row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 60px;
 }
 
-#accreditation-1 .image-gallery {
+#about .presence-row .presence-card {
+    flex: 0.25;
+    margin: 16px;
     padding: 16px;
 }
 
-#accreditation-1 .image-gallery .image-gallery-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-#accreditation-1 .image-gallery .image-gallery-row .card {
-    border-radius: 4px;
-    width: calc(100% - 12px);
-    margin: 0 6px;
-    position: relative;
-    overflow: hidden;
-    height: 350px;
-    cursor: pointer;
-    /*box-shadow: 1px 1px 2px 2px #00000010;*/
-    margin-bottom: 24px;
-}
-
-#accreditation-1 .image-gallery .image-gallery-row .card img{
-    width: 100%;
-    height: 100%;
-    border-radius: 4px;
-    transition: 0.5s ease-in-out;
-}
-
-#accreditation-1 .image-gallery .image-gallery-row .card .caption {
-    font-size: 20px;
+#about .presence-row .presence-card .presence-showcase {
     text-align: center;
-    padding: 12px 16px;
-    background: #00000090;
-    color: var(--background-color);
-    position: absolute;
-    width: calc(100% - 24px);
-    bottom: -50px;
-    transition: 0.5s ease-in-out;
-    height: 20px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
     justify-content: center;
-    /*transform: scale(0);*/
-    /*opacity: 0;*/
-
 }
 
-#accreditation-1 .image-gallery .image-gallery-row .card:hover img {
-    transform: scale(0.9);
+#about .presence-row .presence-card .presence-content {
+    text-align: center;
+    padding: 8px;
+    margin-top: 32px;
 }
 
-#accreditation-1 .image-gallery .image-gallery-row .card:hover .caption {
-    /*transform: scale(1);*/
-    /*opacity: 1;*/
-    bottom: 0;
+#about .presence-row .presence-card .content-head {
+    font-size: 38px;
+    font-weight: bold;
+    color: #2F2F2F;
+    margin: 0 auto;
+    margin-bottom: 12px;
 }
