--- a/css/home.css
+++ b/css/home.css
@@ -364,6 +364,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    color: white;
 }
 
 #home .contact-us .content-side {
