--- a/css/index.css
+++ b/css/index.css
@@ -337,6 +337,68 @@ header {
 }
 
 /* ============ Footer ============= */
+#footer .contact-us {
+    max-width: 1440px;
+    padding: 32px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+}
+
+#footer .contact-us .content-side {
+    flex: 0.4;
+}
+
+#footer .contact-us .content-side .content-title {
+    font-size: 32px;
+    font-weight: bold;
+    color: #2F2F2F;
+    margin-bottom: 12px;
+}
+
+#footer .contact-us .content-side p {
+    margin-bottom: 8px;
+}
+
+#footer .contact-us .cta-side {
+    flex: 0.6;
+    text-align: right;
+
+}
+
+#footer .contact-us .cta-side img {
+    border: 1px solid black;
+}
+
+@media (max-width: 1024px) {
+    #footer .contact-us .content-side {
+        flex: 0.3;
+    }
+    #footer .contact-us .cta-side {
+        flex: 0.7;
+    }
+}
+@media (max-width: 740px) {
+    #footer .contact-us {
+        flex-direction: column;
+    }
+    #footer .contact-us .content-side {
+        flex: 1
+    }
+    #footer .contact-us .cta-side {
+        flex: 1
+    }
+    #footer .contact-us .cta-side {
+        margin-top: 32px;
+    }
+    #footer .contact-us .cta-side {
+        width: 100%;
+    }
+}
+
 footer {
     display: flex;
     align-items: center;
