--- a/css/gallery.css
+++ b/css/gallery.css
@@ -72,5 +72,6 @@
 @media (max-width: 740px) {
     #gallery-1 .image-gallery .image-gallery-row .card {
         width: 100%;
+        height: 300px;
     }
 }
