--- a/css/gallery.css
+++ b/css/gallery.css
@@ -10,6 +10,11 @@
     margin-bottom: 48px;
 }
 
+#gallery-1 .youtube-video {
+    margin-bottom: 24px;
+    height: 600px;
+}
+
 #gallery-1 .image-gallery .image-gallery-row {
     display: flex;
     justify-content: center;
@@ -67,11 +72,19 @@
     #gallery-1 .image-gallery .image-gallery-row .card {
         width: 40%;
     }
+
+    #gallery-1 .youtube-video {
+        height: 340px;
+    }
 }
 
-@media (max-width: 740px) {
+@media (max-width: 480px) {
     #gallery-1 .image-gallery .image-gallery-row .card {
         width: 100%;
         height: 300px;
+        padding: 0;
+    }
+    #gallery-1 .youtube-video {
+        height: 100%
     }
 }
